# rhodium

./: .env.example.nix  .envrc  .gitignore  .sops.yaml  ATUIN_PENDINGS.md  CLAUDE.md  PENDING.md  PENDINGS.txt  README.md  flake.nix  flake.nix.bkp  justfile  justfile.3  justfile.4  justfile.bkp  justfile_1.bkp  nixos.code-workspace  result  rhodium.code-workspace  rhodium.json  zen-trace.txt
.claude/: settings.local.json
.direnv/: flake-profile-1-link
.pending/: PENDING.md  README.md.bkp
assets/: README.md  calvin-m-wrapped.txt  calvin-s.txt  default.nix
changelog/: 0001_TASK_wallpaper-collection-registry.md  0002_TASK_s3-activation-fetcher.md  0003_TASK_assets-module-wiring.md  0004_TASK_git-history-cleanup.md  0005_TASK_fuzzel-collection-submenu.md  0006_TASK_just-recipe-wallpaper-sync.md  0007_TASK_atuin-sync-setup.md
dev/: README.md
devshells/: astal.nix  nixos.nix
docs/: 01-about.md  01_architecture.md  02-motivation.md  03-tools.md  04-features.md  05-quick-start.md  06-usage.md  07-options.md  08-keybinds.md  09-showcase.md  10-attributions.md  _config.yml  index.md
env/: README.md  default.nix
flakeModules/: README.md
home/: README.md  default.nix  options.nix
hosts/: README.md  default.nix  manifest.nix
lib/: README.md  default.nix  logos.nix  mk-host.nix  mk-user.nix  options.nix
modules/: README.md  default.nix
overlays/: README.md  custom-fonts.nix  default.nix  fonts.nix  nerd-fonts.nix
samples/haskell/: flake.nix  rhodium.cabal
samples/haskell/app/: Main.hs
tools/cli/: Cargo.toml  README.md
tools/cli/src/: main.rs
(+23122 files in other folders)
