cabal-version: 2.2
name: rhodium
version: 0.1.0.0
synopsis: A simple Haskell project
description: Welcome to Rhodium
license: MIT
author: Your Name
maintainer: your.email@example.com
category: Development
build-type: Simple

executable rhodium
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010
