[package]
name = "nixos-config-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing NixOS configurations"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tera = "1.19"
directories = "5.0"
